# mnemex

./: .gitguardian.yml  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODEX_EXECUTION_PLAN.md  DECISIONS.md  HACKATHON_RESEARCH.md  README.md  codebase-mind-improved-plan.md  goal-command.md  implementation-plan-opus48.md  pyproject.toml
.github/workflows/: ci.yml
benchmarks/: 2026-07-15-decision-integrity-evaluation.md  2026-07-15-three-repositories.md  2026-07-17-codex-guard-evaluation.md  decision-integrity-fixtures.json
benchmarks/codex-guard-fixtures/: README.md  example-results.synthetic.json  task-01-stateless-auth-violation.json  task-02-payment-idempotency-violation.json  task-03-compatible-extraction.json  task-04-legitimate-evolution.json  task-05-stale-decision.json
benchmarks/results/: codex-guard-scorecard.json
examples/cross-agent-demo/: README.md
examples/scoped-invariants/: README.md
npm/mnemex-skills/: SKILL.md  (+1 more)
tests/: test_agent_setup.py  test_agents_md.py  test_anchor_adversarial.py  test_anchor_typing.py  test_anchors.py  test_bundles.py  test_cli_config.py  test_codex_setup.py  test_config.py  test_conflicts.py  test_constraints.py  test_context_for_file.py  test_decision_guard.py  test_diff_guard.py  test_embedding_providers.py  test_evidence.py  test_hackathon_evaluation.py  test_hooks.py  test_indexer.py  test_integration_e2e.py  test_judge.py  test_lifecycle.py  test_mcp_stdio_integration.py  test_mistakes.py  test_release_artifacts.py  test_retrieval.py  test_retrieval_golden.py  test_reviews.py  test_scorecard.py  test_security.py  test_security_integration.py  test_server.py  test_smoke.py  test_storage.py  test_storage_migrations.py  test_tui.py  test_vector_backend.py
tools/: audit_release_artifacts.py  build_release_bundle.py  collect_windows_security_evidence.ps1  evaluate_codex_guard.py  evaluate_decision_integrity.py
(+33 files in other folders)
